fixed form to be centered and correct length. added testimonials cards, added contact form and correct spacing.

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,8 @@ html {
 }
 
 .navbar-logo {
-  width: 80px;
+  width:85px;
+  
 }
 
 .carousel-container {
